--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# ????????? ??????????? ? ???? ?????? PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.username=db_user
+spring.datasource.password=123
 
+# ????????? Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
