--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,16 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  backend:
+    build: ./
+    container_name: business-project-backend
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    environment:
+      - SERVER_PORT = 8080
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres/db
 
 volumes:
   db-data:
